Fixed overflowing image issue

--- a/static/css/grellyd.css
+++ b/static/css/grellyd.css
@@ -32,6 +32,7 @@ video {
 }
 
 .autoplay_desktop {
+    display: inline-block;
     overflow: hidden;
     border-radius: 10px;
 }
